Moved checkout file

--- a/azure-pipelines/update-template.yml
+++ b/azure-pipelines/update-template.yml
@@ -16,7 +16,7 @@ steps:
           Import-Module Microsoft.Graph -Global -Force  
         }
 
-- template: ../common-templates/checkout.yml
+- template: checkout.yml
   parameters:
     projectFileName: ${{ parameters.projectFileName }}
     runName: ${{ parameters.projectFileName }}
