Added one more download

--- a/azure-pipelines/checkout.yml
+++ b/azure-pipelines/checkout.yml
@@ -3,6 +3,11 @@ steps:
   clean: true
   fetchDepth: 1
   persistCredentials: true
+  
+- checkout: msgraph-sdk-powershell
+  clean: true
+  fetchDepth: 1
+  persistCredentials: true
 
 - checkout: self
   clean: true
