--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -17,6 +17,12 @@ resources:
      endpoint: timayabi2020
      name: timayabi2020/microsoftgraph-docs-powershell
      ref: main
+     
+   - repository: msgraph-sdk-powershell
+     type: github
+     endpoint: timayabi2020
+     name: timayabi2020/msgraph-sdk-powershell
+     ref: main
 
 variables:
   buildConfiguration: 'Release'
