--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -43,4 +43,4 @@ jobs:
     inputs:
       targetType: 'filePath'
       pwsh: true
-      filePath: $(System.DefaultWorkingDirectory)\scripts\FileCopy.ps1
+      filePath: s\powershell-docs-update\scripts\FileCopy.ps1
