--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -31,6 +31,8 @@ jobs:
 - job: PowerShellDocsUpdate
   pool: 
     name: Default
+    demands:
+     - agent.name -equals DocsUpdate
   timeoutInMinutes: ${{ parameters.PipelineTimeout }}
   steps:
   - template: update-template.yml
