--- a/azure-pipelines/update-template.yml
+++ b/azure-pipelines/update-template.yml
@@ -12,6 +12,7 @@ steps:
           echo "Latest version already installed"
         }else {
           echo "Installing latest version"
+          Install-PackageProvider nuget -force
           Install-Module Microsoft.Graph -Repository PSGallery -Scope AllUsers -Force -AllowClobber
           Import-Module Microsoft.Graph -Global -Force  
         }
