Update powershell-docs.yml for Azure Pipelines

--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -30,7 +30,7 @@ variables:
 jobs:
 - job: PowerShellDocsUpdate
   pool: 
-    name: default
+    name: Docs
     demands:
      - agent.name -equals Docs
   timeoutInMinutes: ${{ parameters.PipelineTimeout }}
