--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -48,7 +48,7 @@ jobs:
       pwsh: true
       filePath: powershell-docs-update\scripts\FileCopy.ps1
 
-  - task: Bash@3
+  - task: PowerShell@2
     displayName: Pushing to github
     env:
       GITHUB_TOKEN: $(GITHUB_TOKEN)
