--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -58,6 +58,8 @@ jobs:
         Set-Location microsoftgraph-docs-powershell
         Write-Host "Location set"
         git status
+        git add .
+        git commit -m "Docs update"
         git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git"
 
          
