Update powershell-docs.yml for Azure Pipelines

--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -58,8 +58,9 @@ jobs:
         Set-Location microsoftgraph-docs-powershell
         Write-Host "Location set"
         git status
+        git branch --show-current
         git add .
         git commit -m "Docs update"
-        git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git"
+        git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git origin"
 
          
