--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -57,10 +57,10 @@ jobs:
       script: |
         Set-Location microsoftgraph-docs-powershell
         Write-Host "Location set"
-        git status
+        #git status
         git branch --show-current
-        git add .
-        git commit -m "Docs update"
-        git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git origin"
+        #git add .
+        #git commit -m "Docs update"
+        #git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git origin"
 
          
