--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -56,11 +56,13 @@ jobs:
       targetType: inline
       script: |
         Set-Location microsoftgraph-docs-powershell
-        Write-Host "Location set"
-        #git status
+        $date = Get-Date -Format "dd-MM-yyyy"
+        $proposedBranch = "weekly_update_help_files_"+$date
+        Write-Host "Checking out to " $proposedBranch
+        git checkout -b $proposedBranch
         git branch --show-current
-        #git add .
-        #git commit -m "Docs update"
-        #git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git origin"
+        git add .
+        git commit -m "Docs update"
+        git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git"
 
          
