Update powershell-docs.yml for Azure Pipelines

--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -61,8 +61,8 @@ jobs:
         Write-Host "Checking out to " $proposedBranch
         #git checkout $proposedBranch
         git branch --show-current
-        #git add .
-        #git commit -m "Docs update"
+        git add .
+        git commit -m "Docs update"
         git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git"
         git status
 
