--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -58,13 +58,13 @@ jobs:
         Set-Location microsoftgraph-docs-powershell
         $date = Get-Date -Format "dd-MM-yyyy"
         $proposedBranch = "weekly_update_help_files_"+$date
-        Write-Host "Checking out to " $proposedBranch
-        git checkout main
+        Write-Host "Checking out to " $
+        git fetch
+        git checkout $proposedBranch
         git add .
         git commit -m "Docs update"
-        git merge $proposedBranch
-        git push -u origin
-        #git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git" HEAD
+        #git push --set-upstream origin weekly_update_help_files_15-08-2022
+        git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git" $proposedBranch
         git status
 
          
