--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -61,7 +61,7 @@ jobs:
         Write-Host "Checking out to " $proposedBranch
         git checkout -f $proposedBranch
         #git push --set-upstream origin weekly_update_help_files_15-08-2022
-        git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git" $proposedBranch
+        git push --set-upstream "https://${env:GITHUB_TOKEN}@github.com/timayabi2020/microsoft-docs-powershell.git"
         git status
 
          
