--- a/azure-pipelines/powershell-docs.yml
+++ b/azure-pipelines/powershell-docs.yml
@@ -55,10 +55,11 @@ jobs:
     inputs:
       targetType: inline
       script: |
-        Set-Location microsoftgraph-docs-powershell
+        cd ..\..\microsoftgraph-docs-powershell
         $date = Get-Date -Format "dd-MM-yyyy"
         $proposedBranch = "weekly_update_help_files_"+$date
         Write-Host "Checking out to " $proposedBranch
+        (Get-Location).path
         git branch –show-current
         #git checkout -f $proposedBranch
         #git status
