--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ name: "Update Powershell Help Docs PR"
 on:
   push:
     branches: 
-      - main
+      - docs_5
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
