--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Update author information
+      run echo TimMayabi > AUTHOR
       
     #- name: List Directory
     #  run: | 
