--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ name: "Update Powershell Help Docs PR"
 on:
   push:
     branches: 
-      - main
+      - 'docs_*'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,8 +22,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Update author information
-      run: echo "TimMayabi" > AUTHOR
+    #- name: Update author information
+    #  run: echo "TimMayabi" > AUTHOR
       
     #- name: List Directory
     #  run: | 
@@ -35,7 +35,7 @@ jobs:
     - name: Raise PR 
       uses: peter-evans/create-pull-request@v3
       with:
-        branch: "timayabi2020/docs_7"
+        #branch: "timayabi2020/docs_8"
         base: main
         title: "Demo for auto pr"
         committer: Tim <timwamalwa@gmail.com>
